# roc-ray

./: .gitignore  .gitmodules  BUG_REPORT.md  CONTRIBUTING.md  Cargo.toml  LEGAL_DETAILS  LICENSE  README.md  build-and-run.ps1  build-and-run.sh  build.rs  build.sh  build.zig  build.zig.zon  build_roc.zig  build_wasm.ps1  build_wasm.sh  bundle.sh  flake.nix  generate-bindings.sh  justfile  prebuild-host.sh  prebuild-host.sh.md  rust-toolchain.toml  src.zig
.cargo/: config.toml
.githooks/: pre-commit
ci/: ROC_COMMIT  all_tests.py  all_tests.sh  build_roc.sh  get_roc_commit.py  test_bundle_artifact.py  tidy.zig  update_roc_commit.py  wasm-test.mjs  zig_lints.zig
examples/: 2d_camera.roc  2d_camera_split_screen.roc  Counter.roc  Counter2.roc  SmallWindow.roc  World.roc  audio.roc  basic-fonts.roc  basic-image.roc  basic-network.roc  basic-shader.roc  basic-shapes.roc  basic.roc  basic_shapes.roc  breakout.roc  camera.roc  cave_climb.roc  counter  draw.roc  gui-counter.roc  gui-counter2  gui-counter2.roc  hello_world.roc  hello_world_1.rrsim  keyboard.roc  keyboard_1.rrsim  keyboard_minimal.roc  keyboard_minimal_1.rrsim  kitchen_sink.roc  music-deinit.roc  music.roc  pong.roc  random.roc  read_env.roc  read_env_1.rrsim  reload-text.roc  snake.roc  sound.roc  sprites.roc  squares.roc  (+3 more)
host/: main.zig
platform/: Action.roc  App.roc  Assets.roc  Audio.roc  Camera.roc  Color.roc  Core.roc  Draw.roc  Drawable.roc  Effect.roc  Font.roc  GUI.roc  Host.roc  InternalColor.roc  InternalKeyboard.roc  InternalMatrix.roc  InternalMouse.roc  InternalRectangle.roc  Keys.roc  (+30 more)
(+90 files in other folders)
