[package]
name = "roc-ray"
version = "0.1.0"
edition = "2021"

[dependencies]
roc_std = { git = "https://github.com/roc-lang/roc.git" }
roc_std_heap = { git = "https://github.com/roc-lang/roc.git" }
libc = "0.2"

[build-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
flate2 = "1.0"
tar = "0.4"
zip = "0.5"
bytes = "1"

[features]
default = []
trace-debug = []
